[gd_scene load_steps=5 format=3 uid="uid://dw2oiju4chjw7"]

[ext_resource type="Script" uid="uid://dtkja878hsyft" path="res://screens/main_menu.gd" id="1_jf8mj"]
[ext_resource type="Theme" uid="uid://cxjwnkpltc1jx" path="res://textTheme.tres" id="2_t3bh0"]
[ext_resource type="Texture2D" uid="uid://c2i2arqnci6ar" path="res://images/wall.png" id="3_t3bh0"]
[ext_resource type="Texture2D" uid="uid://8ydv5rvhh06k" path="res://images/IMG_9306.png" id="4_5mnfb"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jf8mj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 181.0
offset_top = 100.0
offset_right = 298.0
offset_bottom = 236.0

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_t3bh0")
text = "Play
"

[node name="Version notes" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_t3bh0")
text = "Version Notes"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_t3bh0")
text = "Credits"

[node name="Controls" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_t3bh0")
text = "Controls
"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_t3bh0")
text = "Quit"

[node name="Background" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="BackgroundTexture" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.101961)
z_index = -1
layout_mode = 0
offset_left = -4.0
offset_top = -3.0
offset_right = 481.0
offset_bottom = 322.0
mouse_filter = 2
texture = ExtResource("3_t3bh0")
stretch_mode = 1

[node name="Img9306" type="Sprite2D" parent="."]
position = Vector2(245, 49)
scale = Vector2(1.27198, 1.20604)
texture = ExtResource("4_5mnfb")

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Version notes" to="." method="_on_version_notes_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
